452robotics-project3_ws/log/build_2023-03-30_20-25-28/project3/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/shuruixu/Desktop/CSCE452/452-roboticsprojects/452robotics-project3_ws/install/project3/lib/python3.10/site-packages/project3/peopleCounter.py", line 215
    if 
       ^
SyntaxError: invalid syntax

